8371200: ZGC: C2 allocation deopt race